--- a/source/_includes/custom/footer.html
+++ b/source/_includes/custom/footer.html
@@ -4,9 +4,8 @@
 
 <div class="col-md-2">
   <div class="social-icon-list">
-    <a href="https://twitter.com/AdrianArtiles"><img src="/images/glyphicons_social_31_twitter.png"/></a>
-    <a href="https://github.com/sevenadrian"><img src="/images/glyphicons_social_21_github.png"/></a>
-    <a href="mailto:adrian.r.artiles@gmail.com"><img src="/images/glyphicons_social_39_e-mail.png"/></a>
+    <a href="https://twitter.com/donnierayjones"><img src="/images/glyphicons_social_31_twitter.png"/></a>
+    <a href="https://github.com/donnierayjones"><img src="/images/glyphicons_social_21_github.png"/></a>
   </div>
 </div>
 
