--- a/source/_includes/custom/hero.html
+++ b/source/_includes/custom/hero.html
@@ -1,2 +1,2 @@
-<h1>I'm Adrian Artiles</h1>
-<p>a developer & entrepreneur in San Francisco</p>
+<h1>Donnie Ray Jones</h1>
+<p>Jesus follower, husband, dad, texas aggie, software developer, wannabe photographer</p>
