Removed home link from home page and removed photo header fixed position

--- a/source/_layouts/category_index.html
+++ b/source/_layouts/category_index.html
@@ -1,6 +1,11 @@
 ---
 layout: default
 ---
+
+<a href="/" class="home-icon">
+  <img src="/images/home.png"/>
+</a>
+
 <div class="all-posts">
   <div class="container">
     <div class="row">
