--- a/source/_layouts/page.html
+++ b/source/_layouts/page.html
@@ -2,6 +2,10 @@
 layout: default
 ---
 
+<a href="/" class="home-icon">
+  <img src="/images/home.png"/>
+</a>
+
 <div>
 <article role="article">
   {% if page.title %}
@@ -40,5 +44,3 @@ layout: default
   {% endif %}
 </aside>
 {% endunless %}
-
-oh hai 2
