--- a/source/_layouts/post.html
+++ b/source/_layouts/post.html
@@ -3,6 +3,10 @@ layout: default
 single: true
 ---
 
+<a href="/" class="home-icon">
+  <img src="/images/home.png"/>
+</a>
+
 <article role="article" class="full-single-article">
   <div class="container">
     <div class="row">
