--- a/sass/base/_layout.scss
+++ b/sass/base/_layout.scss
@@ -122,6 +122,8 @@ article {
   height: 44px;
   z-index: 700;
   background-color: #333332;
+  background-image: url("http://donnierayjones.com/random/background/sq");
+  background-position: center;
   text-align: center;
   border: 0;
 
