--- a/sass/base/_layout.scss
+++ b/sass/base/_layout.scss
@@ -109,7 +109,7 @@ article {
 .full-single-article {
   padding-top: 30px;
 
-  p {
+  p, ul, ol {
     font-weight: 300;
     font-style: normal;
     font-size: 20px;
@@ -210,4 +210,16 @@ article {
     padding: 6px 0px 0px 0px;
     text-transform: none;
   }
+}
+
+ul, ol {
+  padding-left: 40px;
+}
+
+ul {
+  list-style-type: disc;
+}
+
+ol {
+  list-style-type: decimal;
 }
