fix listings on category for markdown and add styling for lists

--- a/sass/base/_layout.scss
+++ b/sass/base/_layout.scss
@@ -85,7 +85,7 @@
       line-height: 1.2;
     }
 
-    p {
+    p, ul, ol {
       color: #666665;
       font-weight: 300;
       font-style: normal;
