updated twitter username

--- a/source/_includes/custom/home_landing_row.html
+++ b/source/_includes/custom/home_landing_row.html
@@ -3,7 +3,7 @@
   <p>I'm a developer with a passion for the web. In my spare time I'm usually
   snapping photos of my twin girls.</p>
   <div class="social-icon-list">
-    <a title="Twitter" href="https://twitter.com/donnierayjones"><img src="/images/glyphicons_social_31_twitter.png"/></a>
+    <a title="Twitter" href="https://twitter.com/hidrj"><img src="/images/glyphicons_social_31_twitter.png"/></a>
     <a title="GitHub" href="https://github.com/donnierayjones"><img src="/images/glyphicons_social_21_github.png"/></a>
   </div>
 </div>
