updated references to donnierayjones.com

--- a/source/_includes/custom/hero.html
+++ b/source/_includes/custom/hero.html
@@ -1,2 +1,2 @@
-<h1><a href="http://donnierayjones.com">Donnie Ray Jones</a></h1>
+<h1><a href="http://www.donnierayjones.com">Donnie Ray Jones</a></h1>
 <p>Jesus follower, husband, dad, texas aggie, software developer, wannabe photographer</p>
