updated twitter username

--- a/source/_includes/custom/footer.html
+++ b/source/_includes/custom/footer.html
@@ -4,7 +4,7 @@
 
 <div class="col-md-2">
   <div class="social-icon-list">
-    <a href="https://twitter.com/donnierayjones"><img src="/images/glyphicons_social_31_twitter.png"/></a>
+    <a href="https://twitter.com/hidrj"><img src="/images/glyphicons_social_31_twitter.png"/></a>
     <a href="https://github.com/donnierayjones"><img src="/images/glyphicons_social_21_github.png"/></a>
   </div>
 </div>
