--- a/sass/base/_layout.scss
+++ b/sass/base/_layout.scss
@@ -4,19 +4,19 @@
   background-clip: border-box;
   background-color: #323232;
   background-image:
-    url("http://www.donnierayjones.com/random/background/l");
+    url("https://www.donnierayjones.com/random/background/l");
   background-image:
     -ms-linear-gradient(bottom, rgba(0, 0, 0, 0.3) 0%, rgba(0, 0, 0, 0.1) 400px, rgba(0, 0, 0, 0) 100%),
-    url("http://www.donnierayjones.com/random/background/l");
+    url("https://www.donnierayjones.com/random/background/l");
   background-image:
     -moz-linear-gradient(bottom, rgba(0, 0, 0, 0.3) 0%, rgba(0, 0, 0, 0.1) 400px, rgba(0, 0, 0, 0) 100%),
-    url("http://www.donnierayjones.com/random/background/l");
+    url("https://www.donnierayjones.com/random/background/l");
   background-image:
     -webkit-linear-gradient(bottom, rgba(0, 0, 0, 0.3) 0%, rgba(0, 0, 0, 0.1) 400px, rgba(0, 0, 0, 0) 100%),
-    url("http://www.donnierayjones.com/random/background/l");
+    url("https://www.donnierayjones.com/random/background/l");
   background-image:
     linear-gradient(bottom, rgba(0, 0, 0, 0.3) 0%, rgba(0, 0, 0, 0.1) 400px, rgba(0, 0, 0, 0) 100%),
-    url("http://www.donnierayjones.com/random/background/l");
+    url("https://www.donnierayjones.com/random/background/l");
   background-origin: padding-box;
   background-position: 0 0;
   background-repeat: repeat;
@@ -126,7 +126,7 @@ article {
   height: 44px;
   z-index: 700;
   background-color: #333332;
-  background-image: url("http://www.donnierayjones.com/random/background/sq");
+  background-image: url("https://www.donnierayjones.com/random/background/sq");
   background-position: center;
   text-align: center;
   border: 0;
